--- a/public/index.html
+++ b/public/index.html
@@ -17,11 +17,13 @@
       name="description"
       content="Web site created using create-react-app"
     />
+    <link rel="stylesheet" href="/portfolio/static/css/main.css" />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-    <title>React App</title>
+    <title>Adrien Sauvage Portfolio</title>
   </head>
   <body>
     <div id="root"></div>
   </body>
+  <script src="/portfolio/static/js/main.js"></script>
 </html>
